<resources>

    <string name="app_name">Mobility App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="description">Description</string>
    <string name="price_per_hour">Price/Hour</string>
    <string name="licence_plate">Licence Plate</string>
    <string name="my_vehicles">My vehicles</string>
    <string name="support">Support</string>

    <string name="error_wifi_title">Wi-Fi or Mobile Data required</string>
    <string name="error_wifi_sub">to get location and update data</string>
    <string name="error_general_title">An error happened</string>
    <string name="error_general_sub">Please retry in a few minutes</string>

    <string name="error_route_title">No results</string>
    <string name="error_route_sub">No connections found</string>
    <string name="error_not_tracked_title">This line is not tracked</string>
    <string name="error_not_tracked_sub">There is no GPS data for this line</string>
    <string name="error_data_title">Data update required</string>
    <string name="error_data_sub">Please restart the app</string>

    <string name="error_wifi">No internet connection</string>
    <string name="error_general">An error happened</string>
    <string name="error_data">Data update required</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="manufacturer_model">Model</string>
    <string name="availability">Availability</string>
    <string name="car">Car</string>
    <string name="bicycle">Bike</string>
    <string name="type">Vehicle type</string>
    <string name="button_add">ADD</string>
    <string name="error_field_empty">Field cannot be empty</string>
    <string name="error_price_invalid">Price must be between 1 and 150!</string>
    <string name="add_vehicle_information">Add vehicle information</string>
    <string name="points">Points:</string>
    <string name="avoided_co_emissions">Avoided CO&#8322; emissions:</string>
    <string name="reputation">Reputation:</string>
    <string name="driven_time">Time driven in bus:</string>
    <string name="rented_cars">Rented vehicles:</string>
    <string name="borrowed_cars">Borrowed vehicles:</string>
    <string name="bus_info">Bus info</string>

    <string name="transition_morph_view" translatable="false">morph_view_transition</string>
    <string name="solaris_urbino_12">Solaris Urbino 12</string>
    <string name="my_profile">My Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="hours">hours</string>

</resources>
